--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
+/* App.css */
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #F4F5F7;
+  color: #333;
+}
+
+.app-container {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
+  border-radius: 12px;
+  transform: translateY(0);
+  transition: transform .3s ease-in-out;
+}
+
+.app-container:hover {
+  transform: translateY(-5px);
+}
+
+header {
+  background-color: #007bff;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  border-radius: 12px 12px 0 0;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Add these styles to your existing CSS file (App.css) or create a new one */
+
+.header-text {
+  font-size: 48px;
+  font-family: Times New Roman, Georgia, serif;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 20px;
+  outline: 2px solid #007bff;
+
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1),
+         inset 0 2px 8px rgba(0, 0, 0, 0.1),
+         inset 0 4px 16px rgba(0, 0, 0, 0.1);
+}
+
+
+
+nav {
+  margin-top: 20px;
+}
+
+.country-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.country-list li {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.country-list a {
+  display: block;
+  text-decoration: none;
+  padding: 10px 20px;
+  background-color: #f4f5f7;
+  color: #007bff;
+  text-align: center;
+  font-size: 16px;
+  border-radius: 4px;
+  transition: background-color 0.3s, transform 0.3s;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.country-list a:hover {
+  background-color: #f0f1f3;
+  transform: scale(1.05);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.main-content {
+  margin-top: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.university-list-container {
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0 30px 60px rgba(0, 0, 0, 0.2);
+  border-radius: 12px;
+  transform: translateY(0);
+  transition: transform 0.3s ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.university-list-container:hover {
+  transform: translateY(-5px);
 }
